--- a/subway/fire/3.html
+++ b/subway/fire/3.html
@@ -70,12 +70,12 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Get ready to file</h1>
-			<h2 class="bg-danger">Steps</h2>
+			<h2>Steps</h2>
 			<ol class="lst-stps ld-zr">
-			<li><h3><del>Will  you be penalized if you do not file electronically</del> <span class="bg-danger">Determine if you must file electronically</span></h3>
+			<li><h3>Determine if you must file electronically</h3>
 
 <p>As of January 2024, if you file more than  6 information returns (slips) for a calendar year, you are <strong>required</strong> to file electronically by<span class="bg-danger">:</span>
-<ul class="bg-danger">
+<ul>
 <li> <a href=https://apps.cra-arc.gc.ca/ebci/leb0/upload/pub/disclaimer.action?request_locale=en>Internet  file transfer</a></li>
 <li> <a href=https://apps.cra-arc.gc.ca/ebci/leb0/webform/pub/disclaimer.action?request_locale=en>Web  Forms</a></li>
 </ul>
@@ -139,11 +139,11 @@
   </tr>
 
 </table>
-<p class="bg-danger">For example:</p>
+<p>For example:</p>
 
-<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg bg-danger">
-<li><span class="mrgn-tp-0 text-muted h5">51 T5 slips filed on paper (fine is $250)</span> </li>
-<li class="brdr-bttm"><span class="fas fa-plus fa-li"><span class="wb-inv">plus</span></span> <span class="text-muted h5">51 T4 slips filed on paper (fine is $250)</span></li>
+<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
+<li><span class="mrgn-tp-0 text-muted h5">51 T5 slips filed on paper (penalty is $250)</span> </li>
+<li class="brdr-bttm"><span class="fas fa-plus fa-li"><span class="wb-inv">plus</span></span> <span class="text-muted h5">51 T4 slips filed on paper (penalty is $250)</span></li>
 
 <li><span class="fas fa-equals fa-li"><span class="wb-inv">equals</span></span><span class="text-muted h5">$500 penalty</span> </li>
 </ul>
