--- a/subway/fire/4.html
+++ b/subway/fire/4.html
@@ -72,7 +72,7 @@
             <h1 property="name" id="wb-cont" class="gc-thickline">How to file</h1>
             <p>Internet filing is available&nbsp;until <strong><span class="far fa-calendar-alt"></span> December 22, 2023</strong>.</p>
 				<p>Our Internet filing applications are  convenient, free and secure.</p>
-				<h2 class="bg-danger">Steps</h2>
+				<h2>Steps</h2>
 			<ol class="lst-stps ld-zr">
 			<li><h3>Have your completed XML files</h3>
 			<p>Have your documentation ready in order to  your information return to CRA.</p></li>
@@ -125,7 +125,7 @@
 </ul>
 </details>
 </dd>
-  <dt><span class="fas fa-check text-success"></span> Internet file transfer</dt><dd>If you use payroll, commercial, or  in-house developed software, to submit an XML file of up to 150 MB over the  Internet 
+  <dt><span class="fas fa-check text-success"></span> <a href=https://apps.cra-arc.gc.ca/ebci/leb0/upload/pub/disclaimer.action?request_locale=en>Internet  file transfer</a></dt><dd>If you use payroll, commercial, or  in-house developed software, to submit an XML file of up to 150 MB over the  Internet 
   </dd>
 
 
@@ -148,44 +148,7 @@
  
 
 </li>
-<li><h2>Be aware of penalties</h2>
-<details>
-<summary>Penalties if you file using the wrong filing method</summary>
-<p>If you are <strong>required</strong> to <a href="https://test.canada.ca/cra-arc/payroll/file/how.html#h_1_1">file  electronically</a> and you do not file the  returns by <a href="https://apps.cra-arc.gc.ca/ebci/leb0/upload/pub/disclaimer.action?request_locale=en">Internet  file transfer</a> or <a href="https://apps.cra-arc.gc.ca/ebci/leb0/webform/pub/disclaimer.action?request_locale=en">Web  Forms</a>, you may have to pay a penalty as  determined in the table below.<br>
-  <strong>Each slip is an information  return</strong>, and the penalty the CRA assesses is  based on the number of information returns filed in an incorrect format. The  penalty is calculated per type of information return. For example, if you file  51 T5 slips and 51 T4 slips on paper, the CRA would assess 2 penalties of $250,  1 per type of information return.</p>
-<table class="table">
-  <caption>Penalty     based on the number of information returns (slips)</caption>
-  <tr>
-    <th scope="col">Number of information returns (slips)     by type</th>
-    <th scope="col">Penalty</th>
-  </tr>
-  <tr>
-    <td><p>6 to 50 <strong>Returns filed on or    after January 1, 2024</strong></p></td>
-    <td><p>$125</p></td>
-  </tr>
-  <tr>
-    <td><p>51 to 250</p></td>
-    <td><p>$250</p></td>
-  </tr>
-  <tr>
-    <td><p>251 to 500</p></td>
-    <td><p>$500</p></td>
-  </tr>
-  <tr>
-    <td><p>501 to 2,500</p></td>
-    <td><p>$1,500</p></td>
-  </tr>
-  <tr>
-    <td><p>2,501 or more</p></td>
-    <td><p>$2,500</p></td>
-  </tr>
-</table>
-</details>
-<details>
-<summary>Penalties if you file your information return late</summary>
-<p>If you file your information return past  the due date you may be charged a penalty. To learn more, see <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/penalties-interest-other-consequences/payroll-penalties-interest.html#late_filinf_info_return">late-filing  penalties for information returns.</a></p>
-</details>
-</li>
+
 <li><h2>Transfer the file to CRA</h2>
 <p>Follow the instructions for either:</p>
 <ul>
