--- a/subway/fire/4a.html
+++ b/subway/fire/4a.html
@@ -79,29 +79,32 @@
          <ol class="lst-stps ld-zr">
 		 
 		 <li>
-<h3><span class="bg-danger">Know what</span> type  of information returns <span class="bg-danger">can be filed</span> <del>available through Web Forms</del></h3>
-
+<h3>Know what type  of information returns can be filed</h3>
+<p>The following can be filed with Web Forms:</p>
   <dl class="dl-horizontal">
     <dt>T4 Group</dt><dd> T4, T4A, T4A-NR, T4RIF, T4RSP, T4E, T4FHSA</dd>
     <dt>T5 Group</dt><dd> T5, T5007, T5008, T5018, RRSP, TFSA, T5013,  PRPP, PRT XVIII, PRT XIX, T2202</dd>
    <dt>Other</dt><dd> NR4, T3, T1204</dd>
   </dl>
 </li>
-<li><h3 class="bg-danger">File your information returns</h3>
+<li><h3>File your information returns</h3>
+<p>You can file, amend, or cancel information returns using Web Forms.</p>
  <ol class="lst-stps-sub">
-<li><h4 class="bg-danger">[heading]</h4>
+<li><h4>Initial sign-in</h4>
 
-<p>For every situations, the first 2 steps  are:</p>
+<p>For every situation, the first 2 steps  are the same:</p>
 
   <ul>
     <li>On  the disclaimer page, click on &ldquo;I agree&rdquo;</li>
-    <li>On  the Web Forms access page, enter the Account Number without dashes or spaces  (Trust Number, Non-Resident Number, 15 characters RP or RZ Business Number) and  the associated Web access code (WAC) and click &ldquo;Next&rdquo;</li>
+    <li>On  the Web Forms access page, enter the Account Number without dashes or spaces  (Trust Number, Non-Resident Number, 15 characters RP or RZ Business Number) and  the associated Web access code (WAC)</li>
+	<li>Click &ldquo;Next&rdquo;</li>
   </ul>
   </li>
   
-<li><h4 class="bg-danger">[heading]</h4>
-<details><summary><del>How to</del> File an  original return <del>with Web Forms</del></summary>
-<p class="bg-danger">Steps:</p>
+<li><h4>File  new information returns</h4>
+
+<details><summary>File an  original return</summary>
+<p>Steps:</p>
 <ol>
 <li>On  Web Forms – what do you want to do page, select &ldquo;Start a new original or  amended return&rdquo; and click &ldquo;Next&rdquo;.</li>
 
@@ -154,8 +157,114 @@
   </ol>
 
 </details>
-<details><summary><del>How to</del> File an  amended or cancelled return <del>with Web Forms</del></summary>
-<p class="bg-danger">Steps:</p>
+
+
+<details><summary>Continue a return from a saved .xml file that has not been submitted </summary>
+<p>Steps:</p>
+<ol>
+
+ <li>On  Web Forms – what do you want to do page, select &ldquo;Continue a return from the  saved .xml file that has not yet been submitted to the CRA&rdquo; and click &ldquo;Next&rdquo;.</li>
+
+    <li>On  Web Forms – continue with unsubmitted return page, click &ldquo;Choose File&rdquo; to open  your computer browser and select the unsubmitted .xml file previously created  with Web Forms. Click &ldquo;Next&rdquo;.</li>
+
+    <li>You  will be redirected on Web Forms –slip page, with the last slip created on the  incomplete Web Forms file previously saved on your personal computer by option  &ldquo;Save incomplete return&rdquo;. Complete all required (*) slip information, per each  recipient.</li>
+
+    <li>Click  on &ldquo;Validate and Continue&rdquo; to see list of completed slips.</li>
+
+    <li>On  the Web Forms – add/ modify/ delete slips page, add, modify or delete existing  slips on the page before completing the summary. When all the slips complete,  click on: 
+
+    <ul>
+
+      <li><strong>Summary</strong>; to see the calculated summary totals.</li>
+
+      <li><strong>Save  incomplete return</strong>;  to save an unfinished .xml encrypted on your computer to continue later.</li>
+
+      <li><strong>Back  to employer/payer page</strong>;  to change payer information.</li>
+
+    </ul>
+</li>
+    <li>On  the Web Forms – summary page, check the declaration box and click on  &ldquo;Recalculate summary&rdquo; to validate.</li>
+
+    <li>Check  again the declaration box and click on &ldquo;Submit to CRA for processing&rdquo;.</li>
+
+    <li>Confirmation  of receipt page; make sure to print or save a copy of the confirmation page. It  is proof of your submission to CRA.</li>
+
+    <li>Additional  options on this page:
+
+    <ul>
+
+      <li><strong>View  PDF version of your return</strong>; to save complete return in PDF format and print slips. </li>
+
+      <li><strong>Save  your return for future import</strong>; to save complete return as .xml file encrypted to your computer to  send amendments or import later to update and file next year&rsquo;s return. </li>
+
+      <li><strong>File  another return</strong>;  select &ldquo;View PDF version of your return&rdquo; to enable this option and file another  return.</li>
+
+      <li><strong>Download  individual slips</strong>;  to save zip file that contains individual PDF copies of the submitted slips to  print. </li>
+
+    </ul>
+</li>
+<li>
+
+
+</ol>
+</details>
+
+<details><summary>Start a new return using a previously submitted .xml file </summary>
+<p>Steps:</p>
+<ol>
+
+
+    <li>On  Web Forms – what do you want to do page, select &ldquo;Start a new original or  amended return using your previously submitted .xml&rdquo; and click &ldquo;Next&rdquo;.</li>
+
+    <li>On  Web Forms – import previously submitted return page, click &ldquo;Choose File&rdquo; to  open your computer browser and select the submitted .xml file previously  created with Web Forms. Select the type of return (Original, Amended or Fixed  (PartXVIII and PartXIX only)) and click &ldquo;Next&rdquo;.</li>
+
+    <li>You  will be redirected on Web Forms – employer/payer information page, with the  information previously saved on your personal computer by the option &ldquo;Save your  return for future import&rdquo;. The boxes will contains previous values. Update and  complete all required (*) slip information, per each recipient. </li>
+
+    <li>Click  on &ldquo;Validate and Continue&rdquo; to see list of completed slips.</li>
+
+    <li>On  the Web Forms – add/ modify / delete slips page, add, modify or delete existing  slips on the page before completing the summary. When all the slips complete, enter  an explanation for amendments and click on:
+
+    <ul>
+
+      <li><strong>Summary</strong>; to see the calculated summary totals. </li>
+
+      <li><strong>Save  incomplete return</strong>;  to save an unfinished .xml encrypted on your computer to continue later.</li>
+
+      <li><strong>Back  to employer/payer page</strong>;  to change payer information.</li>
+
+    </ul></li>
+
+    <li>On  the Web Forms - summary page, check the declaration box to certify and click on  &ldquo;Recalculate summary&rdquo; to validate. </li>
+
+    <li>Check  again the declaration box, then click on &ldquo;Submit to CRA for processing&rdquo;.</li>
+
+    <li>Confirmation  of receipt page; make sure to print or save a copy of the confirmation page. It  is proof of your submission to CRA.</li>
+
+    <li>Additional  options on this page:
+
+    <ul>
+
+      <li><strong>View  PDF version of your return</strong>; to save complete return in PDF format and print slips.</li>
+
+      <li><strong>Save  your return for future import</strong>; to save complete return as .xml file encrypted to your computer to  send amendments or import later to update and file next year&rsquo;s return. </li>
+
+      <li><strong>File  another return</strong>;  select &ldquo;View PDF version of your return&rdquo; to enable this option and file another  return. </li>
+
+      <li><strong>Download  individual slips</strong>;  to save zip file that contains individual PDF copies of the submitted slips to  print. </li>
+
+    </ul>
+</li>
+
+  </ol>
+
+<p><a  class="btn btn-call-to-action">href=https://apps.cra-arc.gc.ca/ebci/leb0/webform/pub/disclaimer.action?request_locale=en>Start Web Forms</a></p>
+
+
+</details>
+</li>
+<li><h4 class="bg-heading">Make changes, if needed</h4>
+<details><summary>File an  amended or cancelled return</summary>
+<p>Steps:</p>
 <ol>
 <li>On  Web Forms – what do you want to do page, select &ldquo;Start a new original or  amended return&rdquo; and click &ldquo;Next&rdquo;.</li>
 
@@ -201,106 +310,6 @@
 </li>
 </ol>
 </details>
-
-<details><summary><del>How to</del> Continue a return from a saved .xml file that has not been submitted </summary>
-<p class="bg-danger">Steps:</p>
-<ol>
-
- <li>On  Web Forms – what do you want to do page, select &ldquo;Continue a return from the  saved .xml file that has not yet been submitted to the CRA&rdquo; and click &ldquo;Next&rdquo;.</li>
-
-    <li>On  Web Forms – continue with unsubmitted return page, click &ldquo;Choose File&rdquo; to open  your computer browser and select the unsubmitted .xml file previously created  with Web Forms. Click &ldquo;Next&rdquo;.</li>
-
-    <li>You  will be redirected on Web Forms –slip page, with the last slip created on the  incomplete Web Forms file previously saved on your personal computer by option  &ldquo;Save incomplete return&rdquo;. Complete all required (*) slip information, per each  recipient.</li>
-
-    <li>Click  on &ldquo;Validate and Continue&rdquo; to see list of completed slips.</li>
-
-    <li>On  the Web Forms – add/ modify/ delete slips page, add, modify or delete existing  slips on the page before completing the summary. When all the slips complete,  click on: 
-
-    <ul>
-
-      <li><strong>Summary</strong>; to see the calculated summary totals.</li>
-
-      <li><strong>Save  incomplete return</strong>;  to save an unfinished .xml encrypted on your computer to continue later.</li>
-
-      <li><strong>Back  to employer/payer page</strong>;  to change payer information.</li>
-
-    </ul>
-</li>
-    <li>On  the Web Forms – summary page, check the declaration box and click on  &ldquo;Recalculate summary&rdquo; to validate.</li>
-
-    <li>Check  again the declaration box and click on &ldquo;Submit to CRA for processing&rdquo;.</li>
-
-    <li>Confirmation  of receipt page; make sure to print or save a copy of the confirmation page. It  is proof of your submission to CRA.</li>
-
-    <li>Additional  options on this page:
-
-    <ul>
-
-      <li><strong>View  PDF version of your return</strong>; to save complete return in PDF format and print slips. </li>
-
-      <li><strong>Save  your return for future import</strong>; to save complete return as .xml file encrypted to your computer to  send amendments or import later to update and file next year&rsquo;s return. </li>
-
-      <li><strong>File  another return</strong>;  select &ldquo;View PDF version of your return&rdquo; to enable this option and file another  return.</li>
-
-      <li><strong>Download  individual slips</strong>;  to save zip file that contains individual PDF copies of the submitted slips to  print. </li>
-
-    </ul>
-</li>
-</ol>
-</details>
-
-<details><summary><del>How to</del> Start a new return using a previously submitted .xml file </summary>
-<p class="bg-danger">Steps:</p>
-<ol>
-
-
-    <li>On  Web Forms – what do you want to do page, select &ldquo;Start a new original or  amended return using your previously submitted .xml&rdquo; and click &ldquo;Next&rdquo;.</li>
-
-    <li>On  Web Forms – import previously submitted return page, click &ldquo;Choose File&rdquo; to  open your computer browser and select the submitted .xml file previously  created with Web Forms. Select the type of return (Original, Amended or Fixed  (PartXVIII and PartXIX only)) and click &ldquo;Next&rdquo;.</li>
-
-    <li>You  will be redirected on Web Forms – employer/payer information page, with the  information previously saved on your personal computer by the option &ldquo;Save your  return for future import&rdquo;. The boxes will contains previous values. Update and  complete all required (*) slip information, per each recipient. </li>
-
-    <li>Click  on &ldquo;Validate and Continue&rdquo; to see list of completed slips.</li>
-
-    <li>On  the Web Forms – add/ modify / delete slips page, add, modify or delete existing  slips on the page before completing the summary. When all the slips complete, enter  an explanation for amendments and click on:
-
-    <ul>
-
-      <li><strong>Summary</strong>; to see the calculated summary totals. </li>
-
-      <li><strong>Save  incomplete return</strong>;  to save an unfinished .xml encrypted on your computer to continue later.</li>
-
-      <li><strong>Back  to employer/payer page</strong>;  to change payer information.</li>
-
-    </ul></li>
-
-    <li>On  the Web Forms - summary page, check the declaration box to certify and click on  &ldquo;Recalculate summary&rdquo; to validate. </li>
-
-    <li>Check  again the declaration box, then click on &ldquo;Submit to CRA for processing&rdquo;.</li>
-
-    <li>Confirmation  of receipt page; make sure to print or save a copy of the confirmation page. It  is proof of your submission to CRA.</li>
-
-    <li>Additional  options on this page:
-
-    <ul>
-
-      <li><strong>View  PDF version of your return</strong>; to save complete return in PDF format and print slips.</li>
-
-      <li><strong>Save  your return for future import</strong>; to save complete return as .xml file encrypted to your computer to  send amendments or import later to update and file next year&rsquo;s return. </li>
-
-      <li><strong>File  another return</strong>;  select &ldquo;View PDF version of your return&rdquo; to enable this option and file another  return. </li>
-
-      <li><strong>Download  individual slips</strong>;  to save zip file that contains individual PDF copies of the submitted slips to  print. </li>
-
-    </ul>
-</li>
-  </ol>
-
-<p><a  class="btn btn-call-to-action">href=https://apps.cra-arc.gc.ca/ebci/leb0/webform/pub/disclaimer.action?request_locale=en>Start Web Forms</a></p>
-
-
-</details>
-</li>
 </ol>
 
 </li>
