--- a/subway/fire/4b.html
+++ b/subway/fire/4b.html
@@ -76,14 +76,14 @@
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Filing  with Internet file transfer</h1>
           <p> Internet file transfer allows  you to use payroll, commercial, or in-house developed software, to submit an  XML file of up to 150 MB over the Internet.</p>
-		  <h2 class="bg-danger">Steps</h2>
+		  <h2>Steps</h2>
 		  <ol class="lst-stps ld-zr">
 		  <li><h3>Have your XML file ready</h3>
 		  <p>Have your XML file  completed and save as .xml.</p>
-		  <p class="bg-danger">Important considerations:</p>
+		  <p>Important considerations:</p>
 		  <ul>
 			<li>If you are using a  commercial software, it will automatically create your .xml file</li>
-			<li><strong><del>IMPORTANT</del></strong> An .xml file created with  Web Forms or a PDF document saved as an .xml will <strong>not</strong> pass validations  through Internet filer transfer</li>
+			<li>An .xml file created with  Web Forms or a PDF document saved as an .xml will <strong>not</strong> pass validations  through Internet filer transfer</li>
 			</ul>
 		  
 		  
