--- a/subway/fire/2.html
+++ b/subway/fire/2.html
@@ -155,7 +155,7 @@
 </ul>	
 </details>
 
-<h2 id="h-2">What  if you file your information return late</h2>
+<h2 id="h-2">If you file your information return late</h2>
 
 <p>If you file your information return past  the due date you may be charged a penalty.</p>
 <p>Refer to: <a href=https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/penalties-interest-other-consequences/payroll-penalties-interest.html#late_filinf_info_return>Late-filing  penalties for information returns</a></p>
