--- a/subway/fire/3b.html
+++ b/subway/fire/3b.html
@@ -87,11 +87,13 @@
 
   <p><strong>If you do not use commercial  software, the use of the Web Forms is recommended, otherwise, </strong>you have to create your own .xml file. Your file name must have  the extension .xml.</p>
 
-   <p><strong>Important:</strong> An .xml file created with Web Forms or a PDF document  saved as an .xml will NOT pass validations through Internet file transfer.</p>
+  
 
-   <p><strong>Note:</strong> We do not accept returns filed on magnetic tapes, CDs,  DVDs, USB keys, or diskettes.</p>
 
-<p><strong>Good  to know;</strong><strong> </strong></p>
+
+<h2>Steps</h2>
+<ol class="lst-stps ld-zr">
+<li><h3>Understand how characters affect the xml file</h3>
 
 <ul>
 
@@ -99,11 +101,9 @@
 
   <li>These specifications are subject to change.</li>
 
-  <li>If you need to use any of the following special characters,  please use a semi-colon <strong>after</strong> the  characters as shown in the chart below:</li>
-
-</ul>
-
-<table class="table max-content table-bordered">
+  <li>If you need to use any of the following special characters,  please use a semi-colon <strong>after</strong> the  characters as shown in the chart below: <div class="row">
+<div class="col-md-6">
+<table class="table max-content">
 
   <tr>
 
@@ -154,10 +154,12 @@
   </tr>
 
 </table>
-
-<p><strong>Note:</strong> Although the above special characters are entered as 4  characters or more, they are considered to be only 1 character when entered in  the content area of an XML tag.<br>
-
-  <strong>Example:</strong> John Smith &amp; Sons will be entered as John Smith <strong>&amp;amp;</strong> Sons</p>
+</div>
+<div class="col-md-6">
+<p>Although the special characters in the table are entered as 4  characters or more, they are considered to be only 1 character when entered in  the content area of an XML tag.</p>
+</div>
+</div>
+<strong>Example:</strong> John Smith &amp; Sons will be entered as: <span class="nowrap">John Smith <strong>&amp;amp;</strong> Sons</span> </p>
 
 <ul>
 
@@ -168,14 +170,18 @@
 <p><strong>Example:</strong> &lt;padj_amt/&gt;is  an optional empty tag.<br>
 
   If you have no amount to report in this tag, you do not need to include the tag  in your submission.</p>
+  </li>
+  </ul>
+  </li>
+  <li><h3>Use these encoding options</h3>
+<ul>
+<li>
 
-<p><u>Encoding options:</u><br>
+  <strong>ISO-8859-1</strong> (International Characters)</li>
 
-  <strong>ISO-8859-1</strong> (International Characters)<br>
+ <li><strong>Windows-1252</strong></li>
 
- <strong>Windows-1252</strong><br>
-
-  <strong>UTF-8</strong><br>
+  <li><strong>UTF-8</strong>
 
   To properly capture international  characters (for example, the French character é) in XML files, you must use <strong>ISO-8859-1</strong> encoding.  <br>
 
@@ -183,51 +189,50 @@
 
   <strong>Example:</strong> If you used <strong>ISO-8859-1</strong>, then you would start with<br>
 
-  &lt;?xml version=&quot;1.0&quot; encoding=&quot;ISO-8859-1&quot;?&gt;</p>
-
-<ul>
-
-  <li><u>Download the CRA  schema</u><u> </u></li>
-
+  &lt;?xml version=&quot;1.0&quot; encoding=&quot;ISO-8859-1&quot;?&gt;
+  </li>
 </ul>
 
+<li>
+<h3>Download the CRA  schema</h3>
+
 <p>The XML schema defines the building  blocks of an .xml file. The schemas are in .xsd format.</p>
+<p>To file information returns:</P>
+<ul class="lst-spcd">
 
-<h5>Schema  for filing information returns </h5>
+<li>For <strong>2023:</strong> Download the <a href=https://www.canada.ca/content/dam/cra-arc/serv-info/eservices/xmlschm1-23-1.zip">xmlschm1-23-1</a> file</br>
 
-<p>To file information returns in 2023, download the <a href=https://www.canada.ca/content/dam/cra-arc/serv-info/eservices/xmlschm1-23-1.zip>xmlschm1-23-1</a> file.<br>
+  (version 1-23-1, last updated October 7, 2022)</li>
 
-  (version 1-23-1, last updated October 7, 2022)<br>
+ <li> For <strong>T4FHSA</strong> in 2024: Download the (<a href=https://www.canada.ca/content/dam/cra-arc/serv-info/eservices/t4fhsaxmlschm1-24-1.zip">T4FHSAxmlschm1-24-1</a> file)
+</br>
+  (version 1-24-1, last updated <strong>July 11,  2023</strong>)</li>
 
-  To file information return <strong>T4FHSA</strong> in 2024, download the (<a href=https://www.canada.ca/content/dam/cra-arc/serv-info/eservices/t4fhsaxmlschm1-24-1.zip>T4FHSAxmlschm1-24-1</a> file).<br>
-
-  (version 1-24-1, last updated <strong>July 11,  2023</strong>)<br>
-
-  To file information return <strong>T4-T4A</strong> in 2024, download the (<a href=https://www.canada.ca/content/dam/cra-arc/serv-info/eservices/t4-t4axmlxchm1-24-1.zip>T4-T4Axmlschm1-24-1</a> file).<br>
-
-  (version 1-24-1, last updated July 11, 2023) <br>
+  <li>For  <strong>T4-T4A</strong> in 2024: Download the (<a href=https://www.canada.ca/content/dam/cra-arc/serv-info/eservices/t4-t4axmlxchm1-24-1.zip">T4-T4Axmlschm1-24-1</a> file)
+</br>
+  (version 1-24-1, last updated July 11, 2023) </li>
+  </ul>
 
   After you save the .zip file on your  computer, use an extracting software (for example WinZip) to extract the .xsd  files. You have to extract and save <strong>all  files</strong> to one location on your hard drive.</p>
 
-<ul>
+</li>
+<li>
+  <h3>Create and save  your file</h3>
 
-  <li><u>Create and save  your file</u><u> </u></li>
+<ol>
 
-</ul>
+<li>Create your .xml file using the  specifications for the information return you are filing</li><li>Save your .xml file  on your computer</li><li>Name your file with extension <strong>.xml</strong> and note the  location</li>
+</ol>
 
-<p>Create your .xml file using the  specifications for the information return you are filing. Save your .xml file  on your computer. Name your file with extension <strong>.xml</strong> and note the  location.<br>
+  <p>An .xml file created with Web Forms or PDF document saved as  .xml will <strong>not pass</strong> validations through Internet file transfer.</p>
 
-  <strong>Important: </strong>An .xml file created with Web Forms or PDF document saved as  .xml will NOT pass validations through Internet file transfer.</p>
-
-<ul>
-
-  <li><u>Validate your  file</u><u> </u></li>
-
-</ul>
+</li>
+<li>
+  <h3>Validate your  file</h3>
 
 <p>To validate your file, check both the  format and content of an .xml file against our schema files using a validating  parser. You can download validating parsers from the Internet. The software is  not provided or supported by the CRA. If you have questions, ask the software  companies that created the validating parser.</p>
 
-<ul>
+<ol>
 
   <li>Launch the validating parser</li>
 
@@ -237,9 +242,11 @@
 
   <li>Correct all errors the parser finds and  re-validate</li>
 
-  <li>Send new corrected file to CRA.</li>
+  <li>Send new corrected file to CRA</li>
 
-</ul>
+</ol>
+</li>
+</ol>
 
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
