--- a/subway/fire/4.html
+++ b/subway/fire/4.html
@@ -151,10 +151,17 @@
 
 <li><h2>Transfer the file to CRA</h2>
 <p>Follow the instructions for either:</p>
-<ul>
-<li><a href="4a.html">Filing with Web Forms</a></li>
-  <li><a href="4b.html">Filing with Internet file transfer</a></li>
-  </ul>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
+    <li class="cnjnctn-col">
+    <h4 class="mrgn-tp-sm text-muted"><a href="4a.html">Filing with Web Forms</a><span class="wb-inv">: Option 1</span></h4>
+      <p class="bg-danger">[put a short description about Web Forms, so a user can make an informed choice]</p>
+    </li>
+    <li class="cnjnctn-col">
+    <h4 class="mrgn-tp-sm text-muted"><a href="4b.html">Filing with Internet file transfer</a><span class="wb-inv">: Option 2</span></h4>
+      <p> Internet file transfer allows  you to use payroll, commercial, or in-house developed software, to submit an  XML file of up to 150 MB over the Internet.</p>
+    </li>
+</ul>
+
 </li>
 </ol>
 
