--- a/subway/fire/5.html
+++ b/subway/fire/5.html
@@ -70,85 +70,115 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Make corrections after filing</h1>
-            <p>Page content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 class="h3">On this page</h2>
-            <ul>
-               <li><a href="#h-1">Heading A</a></li>
-               <li><a href="#h-2">Heading B</a></li>
-               <li><a href="#h-3">Heading C</a></li>
-               <li><a href="#h-4">Heading D</a></li>
-            </ul>
-           
-<p>After you file your original information  return, you may notice that you made an error when preparing the slips. To  correct these errors you will have to file amended or cancelled slips.<br>
-  You can file amended or cancelled slips  electronically using the Internet file transfer or Web Forms applications.</p>
-<h2><strong>On  this page</strong></h2>
-<ul>
-  <li><u>Amend or cancel slips using Internet file       transfer</u></li>
-  <li><u>Amend or cancel slips using Web Forms</u></li>
-</ul>
-<h2>Amend  or cancel slips using Internet file transfer</h2>
-<ul>
-  <li><u>When you are filing <strong>amended</strong> slips</u></li>
-</ul>
-<ul>
-  <li>include only the slips       that need to be amended</li>
-  <li>use the report type code       &ldquo;A&rdquo; on the summary and slips</li>
-  <li>enter all data that has       not changed for the slip and make changes to fields that require       corrections</li>
-  <li>include <strong>only</strong> the       totals from the amended slips on the amended summary</li>
-  <li>complete the &ldquo;<em>Filer       Amendment Note</em>&rdquo; on the summary page to provide reason for amendment.       When specific reasons apply for individual slips, include the name of       recipient.</li>
-</ul>
-<ul>
-  <li><u>When you are filing <strong>cancelled</strong> slips</u></li>
-</ul>
-<ul>
-  <li>include only the slips       that need to be cancelled</li>
-  <li>use the report type code       &ldquo;A&rdquo; on the summary</li>
-  <li>use report type code &ldquo;C&rdquo;       on the slips</li>
-  <li>enter all data that was on       the original slip (empty slip will be rejected)</li>
-  <li>include <strong>only</strong> the       totals from the cancelled slips on the amended summary</li>
-</ul>
-<p><a href="https://apps.cra-arc.gc.ca/ebci/leb0/upload/pub/disclaimer.action?request_locale=en">Start Internet file transfer (XML)</a></p>
-<h2>Amend  or cancel slips using Web Forms</h2>
-<p>Go to <u>Web Forms instructions </u>page for all details about the application.</p>
-<ul>
-  <li><u>Create an <strong>amendment</strong></u></li>
-</ul>
-<ul>
-  <li>select the amended option</li>
-  <li>input information for only       the slips that need to be amended</li>
-  <li>enter all data that has       not changed for the slip and make changes to fields that require       corrections</li>
-  <li>review the amended summary       that Web Forms creates for you</li>
-  <li>submit your return</li>
-  <li>select &ldquo;<em>Explanation for       amendments</em>&rdquo; dialogue box to provide reason for amendment. When       specific reasons apply for individual slips, include the name of       recipient.</li>
-</ul>
-<ul>
-  <li><u>Importing a submission that was <strong>previously  filed</strong> using Web Forms</u></li>
-</ul>
-<p>If you have saved a return that was filed  using Web Forms you can import it to create your amendment.<br>
-  When you are filing amended slips</p>
-<ul>
-  <li>import the original file</li>
-  <li>select the amend slips       option</li>
-  <li>choose the slips you want       to amend</li>
-  <li>remove the slips that do       not require amendment</li>
-  <li>correct the information or       financial fields that require corrections</li>
-  <li>review the amended summary       that Web Forms creates for you</li>
-  <li>submit your return</li>
-</ul>
-<ul>
-  <li><u>When you are filing <strong>cancelled</strong> slips</u></li>
-</ul>
-<ul>
-  <li>import the original file</li>
-  <li>select the return type &ldquo;<em>Amended</em>&rdquo;</li>
-  <li>choose the slips you want       to cancel and select &ldquo;<em>Cancelled</em>&rdquo; for the slip type</li>
-  <li>remove the slips that do       not require to be cancel</li>
-  <li>keep the information that       is on the slip (empty slip will be rejected)</li>
-  <li>review the amended summary       that Web Forms creates for you</li>
-</ul>
-<p>submit  your return</p>
+           <p>After you file your original information  return, you may need to do some corrections on slips and file amended or  cancelled slips.</p>
 
-</html>
+
+
+<h2 id="h-1">Amend  or cancel slips using Internet file transfer (XML)</h2>
+
+<details><summary>When you are filing <strong>amended</strong> slips</summary>
+
+<ul>
+
+  <li>include only the slips       that need to be amended</li>
+
+  <li>use the report type code       &ldquo;A&rdquo; on the summary and slips</li>
+
+  <li>enter all data that has       not changed for the slip and make changes to fields that require       corrections</li>
+
+  <li>include&nbsp;<strong>only</strong>&nbsp;the       totals from the amended slips on the amended summary</li>
+
+  <li>complete the &ldquo;<em>Filer       Amendment Note</em>&rdquo; on the summary page to provide reason for amendment.       When specific reasons apply for individual slips, include the name of       recipient.</li>
+
+</ul>
+</details>
+<details><summary>When you are filing <strong>cancelled</strong> slips</summary>
+<ul>
+
+  <li>include only the slips       that need to be cancelled</li>
+
+  <li>use the report type code       &ldquo;A&rdquo; on the summary</li>
+
+  <li>use report type code &ldquo;C&rdquo;       on the slips</li>
+
+  <li>enter all data that was on       the original slip (empty slip will be rejected)</li>
+
+  <li>include&nbsp;<strong>only</strong>&nbsp;the       totals from the cancelled slips on the amended summary</li>
+
+</ul>
+</details>
+<p><a href=https://apps.cra-arc.gc.ca/ebci/leb0/upload/pub/disclaimer.action?request_locale=en"  class="btn btn-call-to-action">Start Internet file transfer (XML)</a></p>
+
+<h2 id="h-2">Amend  or cancel slips using Web Forms</h2>
+
+
+
+<details><summary>Create an <strong>amendment</strong></summary>
+
+
+<ul>
+
+  <li>select the amended option</li>
+
+  <li>input information for only       the slips that need to be amended</li>
+
+  <li>enter all data that has       not changed for the slip and make changes to fields that require       corrections</li>
+
+  <li>review the amended summary       that Web Forms creates for you</li>
+
+  <li>submit your return</li>
+
+  <li>select &ldquo;<em>Explanation for       amendments</em>&rdquo; dialogue box to provide reason for amendment. When       specific reasons apply for individual slips, include the name of       recipient.</li>
+
+</ul>
+</details>
+<details><summary>Importing a submission that was <strong>previously  filed</strong> using Web Forms</summary>
+
+
+
+<p>If you have saved a return that was filed  using Web Forms you can import it to create your amendment.</p>
+
+ <p>When you are filing amended slips:</p>
+
+<ul>
+
+  <li>import the original file</li>
+
+  <li>select the amend slips option</li>
+
+  <li>choose the slips you want       to amend</li>
+
+  <li>remove the slips that do       not require amendment</li>
+
+  <li>correct the information or       financial fields that require corrections</li>
+
+  <li>review the amended summary       that Web Forms creates for you</li>
+
+  <li>submit your return</li>
+
+</ul>
+</details>
+<details><summary>When you are filing <strong>cancelled</strong> slips</summary>
+
+<ul>
+
+  <li>import the original file</li>
+
+  <li>select the return type &ldquo;<em>Amended</em>&rdquo;</li>
+
+  <li>choose the slips you want       to cancel and select &ldquo;<em>Cancelled</em>&rdquo; for the slip type</li>
+
+  <li>remove the slips that do       not require to be cancel</li>
+
+  <li>keep the information that       is on the slip (empty slip will be rejected)</li>
+
+  <li>review the amended summary       that Web Forms creates for you</li>
+
+  <li>submit your return</li>
+
+</ul>
+</details>
+<p><a href=https://apps.cra-arc.gc.ca/ebci/leb0/webform/pub/disclaimer.action?request_locale=en" class="btn btn-call-to-action">Start Web Forms</a></p>
 
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
