--- a/subway/fire/5.html
+++ b/subway/fire/5.html
@@ -88,7 +88,7 @@
 
   <li>include&nbsp;<strong>only</strong>&nbsp;the       totals from the amended slips on the amended summary</li>
 
-  <li>complete the &ldquo;<em>Filer       Amendment Note</em>&rdquo; on the summary page to provide reason for amendment.       When specific reasons apply for individual slips, include the name of       recipient.</li>
+  <li>complete the &ldquo; Filer       Amendment Note &rdquo; on the summary page to provide reason for amendment.       When specific reasons apply for individual slips, include the name of       recipient.</li>
 
 </ul>
 </details>
@@ -128,7 +128,7 @@
 
   <li>submit your return</li>
 
-  <li>select &ldquo;<em>Explanation for       amendments</em>&rdquo; dialogue box to provide reason for amendment. When       specific reasons apply for individual slips, include the name of       recipient.</li>
+  <li>select &ldquo; Explanation for       amendments &rdquo; dialogue box to provide reason for amendment. When       specific reasons apply for individual slips, include the name of       recipient.</li>
 
 </ul>
 </details>
@@ -164,9 +164,9 @@
 
   <li>import the original file</li>
 
-  <li>select the return type &ldquo;<em>Amended</em>&rdquo;</li>
+  <li>select the return type &ldquo; Amended &rdquo;</li>
 
-  <li>choose the slips you want       to cancel and select &ldquo;<em>Cancelled</em>&rdquo; for the slip type</li>
+  <li>choose the slips you want       to cancel and select &ldquo; Cancelled &rdquo; for the slip type</li>
 
   <li>remove the slips that do       not require to be cancel</li>
 
